--- a/04-ts-video-tutorial/package.json
+++ b/04-ts-video-tutorial/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2"
+    "@types/faker": "^6.6.9",
+    "axios": "^0.27.2",
+    "faker": "^6.6.6"
   }
 }
